--- a/index.html
+++ b/index.html
@@ -30,27 +30,29 @@
     </section>
 
     <!-- Advantages Section -->
-    <section class="advantages">
-      <h2>Get the Citizens advantage.</h2>
-      <div class="advantage-cards">
-        <div class="card">
+    <section class="citizens-advantage">
+      <h2>Get the Citizens Advantage</h2>
+      <div class="advantage-grid">
+        <div class="advantage-card">
           <h3>Unique products</h3>
-          <p>Our loan programs offer a variety of solutions to help you compete effectively across a broad spectrum of borrowers...</p>
+          <p>Our loan programs offer a variety of solutions to help you compete effectively across a broad spectrum of borrowers. With our strong balance sheet, we can offer great conventional and portfolio loan products that give you a competitive edge.</p>
+          <a href="#" class="learn-more">Learn more about our products &gt;</a>
         </div>
-        <div class="card">
+        <div class="advantage-card">
           <h3>Exceptional support</h3>
-          <p>We’ll support you in generating leads and marketing, as well as implementing technology and secondary marketing...</p>
+          <p>We’ll support you in generating leads and marketing, as well as implementing technology and secondary marketing. Our Lead Advantage program reaches prospects in the market for a mortgage, while our loyalty mail program will keep you in touch with current customers.</p>
         </div>
-        <div class="card">
+        <div class="advantage-card">
           <h3>Closing on-time, every time</h3>
-          <p>We expanded our regional operations centers to help you support and take care of paperwork during closing time...</p>
+          <p>We expanded our regional operations centers to help you support and take care of paperwork during closing time. Our one-team “pod” operations approach helps you create satisfied customers and referral sources.</p>
         </div>
-        <div class="card">
+        <div class="advantage-card">
           <h3>You’ll have a voice</h3>
-          <p>In order to give our customers the best service, we’ll give you a real voice in how we operate...</p>
+          <p>In order to give our customers the best service, we’ll give you a real voice in how we operate. Through our Sales Advisory Board, Sales Conferences, and our Top Producers Council, you can drive real change in the company.</p>
         </div>
       </div>
     </section>
+    
 
     <section class="home-loans">
         <h2>Citizens Bank and Citizens One Home Loans</h2>
